added helper methods

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "ascii-progress": "1.0.5",
+    "get-cursor-position": "^1.0.5",
     "moment": "2.18.1",
     "request": "2.0.3",
     "yargs": "8.0.2"
