--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc && node app.js",
-    "test": "tsc && node_modules/.bin/mocha test/**/*.js"
+    "test": "tsc && node_modules/.bin/mocha test/**/*.js",
+    "test:coverage": "./node_modules/istanbul/lib/cli.js cover -x \"*.d.ts\" -x \"test/**/*.js\" node_modules/.bin/_mocha -- --compilers ts:ts-node/register -R spec test/**/*.js && istanbul-coveralls"
   },
   "author": "",
   "license": "MIT",
@@ -15,13 +16,15 @@
     "@types/yargs": "8.0.2",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
+    "istanbul": "0.4.5",
+    "istanbul-coveralls": "^1.0.3",
     "mocha": "3.5.3",
     "mock-fs": "4.4.1",
     "sinon": "3.2.1"
   },
   "dependencies": {
     "ascii-progress": "1.0.5",
-    "get-cursor-position": "^1.0.5",
+    "get-cursor-position": "1.0.5",
     "moment": "2.18.1",
     "request": "2.0.3",
     "yargs": "8.0.2"
