--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
 before_script:
   - npm install -g typescript
 
+after_success:
+  - npm run test:coverage
+
 deploy:
   provider: npm
   email: $NPM_EMAIL
