--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node app.js",
     "test": "tsc && node_modules/.bin/mocha test/**/*.js",
-    "test:coverage": "./node_modules/istanbul/lib/cli.js cover -x \"*.d.ts\" -x \"test/**/*.js\" node_modules/.bin/_mocha -- --compilers ts:ts-node/register -R spec test/**/*.js && istanbul-coveralls"
+    "test:coverage": "./node_modules/istanbul/lib/cli.js cover -x \"*.d.ts\" -x \"test/**/*.js\" node_modules/.bin/_mocha -- -R spec test/**/*.js && istanbul-coveralls"
   },
   "author": "",
   "license": "MIT",
