Implement queries using elasticsearch api

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ascii-progress": "1.0.5",
     "dotenv": "^5.0.1",
+    "elastic-builder": "^1.1.7",
     "elasticsearch": "^14.2.0",
     "get-cursor-position": "1.0.5",
     "moment": "2.21.0",
