--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "istanbul-coveralls": "^1.0.3",
     "mocha": "3.5.3",
     "mock-fs": "4.4.1",
+    "mockserver-client": "^5.3.0",
+    "mockserver-node": "^5.3.0",
     "sinon": "3.2.1"
   },
   "dependencies": {
